--- a/module2/index.html
+++ b/module2/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive Design Example</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <div class="section" style="background-color: #ecf0f1;">
+        <div class="section-header">Chicken</div>
+        <p>Lorem ipsum dolor sit amet...</p>
+    </div>
+    <div class="section" style="background-color: #e74c3c;">
+        <div class="section-header">Beef</div>
+        <p>Lorem ipsum dolor sit amet...</p>
+    </div>
+    <div class="section" style="background-color: #2ecc71;">
+        <div class="section-header">Sushi</div>
+        <p>Lorem ipsum dolor sit amet...</p>
+    </div>
+</body>
+</html>
 
