--- a/module2/index.html
+++ b/module2/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Design Example</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="stylee.css">
+    <meta charset="utf-8">
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Module 2 solution</title>
 </head>
 <body>
-    <div class="section" style="background-color: #ecf0f1;">
-        <div class="section-header">Chicken</div>
-        <p>Lorem ipsum dolor sit amet...</p>
-    </div>
-    <div class="section" style="background-color: #e74c3c;">
-        <div class="section-header">Beef</div>
-        <p>Lorem ipsum dolor sit amet...</p>
-    </div>
-    <div class="section" style="background-color: #2ecc71;">
-        <div class="section-header">Sushi</div>
-        <p>Lorem ipsum dolor sit amet...</p>
+    <h1>Our Menu</h1>
+    <div class='row'>
+        <div class='col-lg-4 col-md-6 col-sm-12'>
+            <div class='section'>
+                <div class='section-header'>Chicken</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit....</p>
+            </div>
+        </div>
+        <div class='col-lg-4 col-md-6 col-sm-12'>
+            <div class='section'>
+                <div class='section-header'>Beef</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit....</p>
+            </div>
+        </div>
+        <div class='col-lg-4 col-md-6 col-sm-12'>
+            <div class='section'>
+                <div class='section-header'>Sushi</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit....</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
 
+                        
